# dynamicmapping

./: CMakeLists.txt  CameraTrajectory.txt  build.sh  object_mesh.pcd  object_mesh.ply
config/: Intel_D435i.yaml  Intel_D455.yaml  TUM2.yaml  TUM3.yaml
include/: DynamicObjectDetecting.h  FrameDrawer.h  System.h  Tracking.h  pointcloudmapping.h
src/: DynamicObjectDetecting.cc  Frame.cc  FrameDrawer.cc  System.cc  Tracking.cc  pointcloudmapping.cc  segmentation.cc
